Addd some more text, changed background image due stretching issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ li {
   text-decoration: none;
 }
 body {
-  background: url(https://img2.akspic.com/image/13698-darkness-video_games-video_game-forest-battlefield_4-1920x1080.jpg);
+  background: url(https://graylinegroup.com/wp-content/uploads/2016/03/city-1209105_1280-1.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
